--- a/matrix_synapse_saml_mozilla/res/style.css
+++ b/matrix_synapse_saml_mozilla/res/style.css
@@ -1,3 +1,35 @@
+.tab {
+  overflow: hidden;
+  background-color: #ededf0;
+}
+
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 15px;
+  transition: 0.1s;
+  width: 50%;
+}
+
+.tab button:hover {
+  background-color: #ddd;
+}
+
+.tab button.active {
+  background-color: #0060df;
+  color: #ffffff;
+}
+
+.tabcontent {
+  display: none;
+}
+.tabcontent.active {
+  display: block;
+}
+
 body {
   background: #ededf0;
   color: #737373;
@@ -10,15 +42,20 @@ body {
 
 .card {
   background-color: #fff;
-  padding: 2em;
   position: relative;
   margin: auto;
   width: 100%;
   box-shadow: 0 0.25em 0.25em 0 rgba(210, 210, 210, 0.5);
-  border-radius: 0.125em; }
+  border-radius: 0.125em;
+}
+.card-body {
+  padding: 2em;
+}
   @media (min-width: 25em) {
     .card {
       max-width: 26em;
+    }
+    .card-body {
       padding: 2.5em; } }
   @supports (display: grid) {
     .card {
